tenzir/bats/data/reference/every/test_every_errors/step_00.ref
error: the file `./this-file-does-not-exist.json` does not exist
 --> <input>:1:15
  |
1 | every 1s from ./this-file-does-not-exist.json
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |